tests/lean/1845.lean.expected.out
1
1845.lean:13:66-13:71: error: Cannot lift nested action `â† bar` over inconsistent syntax variants.
Consider lifting out the binding manually.
